--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,8 @@
-version: '3'
-
 services:
   nginx:
-    image: nginx:1.15-alpine
+    image: nginx:1.29-alpine
     restart: unless-stopped
+    container_name: nginx
     volumes:
       - ./data/nginx:/etc/nginx/conf.d
       - ./data/certbot/conf:/etc/letsencrypt
@@ -14,6 +13,7 @@ services:
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
   certbot:
     image: certbot/certbot
+    container_name: certbot
     restart: unless-stopped
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
